--- a/index.css
+++ b/index.css
@@ -19,10 +19,15 @@
 }
 
 .card {
+  font-family: Georgia, "Times New Roman", Times, serif;
   width: 200px;
-  border: 1px solid black;
+  background-color: #f0f0f0;
   padding: 10px;
   margin: 10px;
+}
+
+.card:hover {
+  border: 1px solid black;
 }
 
 .card > img {
@@ -34,11 +39,24 @@
   flex-wrap: wrap;
 }
 
-.card > h3 {
+.card > em,
+h2 {
   overflow-wrap: break-word;
 }
 
 .filter-btn {
   margin: 10px;
   cursor: pointer;
+}
+
+.shimmer-card {
+  width: 200px;
+  height: 500px;
+  background-color: #f0f0f0;
+  margin: 20px;
+}
+
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
 }
