--- a/index.css
+++ b/index.css
@@ -21,9 +21,11 @@
 .card {
   font-family: Georgia, "Times New Roman", Times, serif;
   width: 200px;
+  height: 500px;
   background-color: #f0f0f0;
   padding: 10px;
   margin: 10px;
+  color: black;
 }
 
 .card:hover {
@@ -37,6 +39,10 @@
 .restaurant-list {
   display: flex;
   flex-wrap: wrap;
+}
+
+.restaurant-list > a {
+  text-decoration: none;
 }
 
 .card > em,
@@ -59,4 +65,12 @@ h2 {
 .card-container {
   display: flex;
   flex-wrap: wrap;
+}
+
+.filter {
+  display: flex;
+}
+
+.search {
+  margin-top: 10px;
 }
